--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile group: "org.http4k", name: "http4k-core", version: "3.33.1"
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
+    compile group: "org.http4k", name: "http4k-client-apache", version: "3.33.1"
     testCompile group: 'junit', name: 'junit', version: '4.4'
     testCompile group: 'com.natpryce', name: 'hamkrest', version: '1.4.2.2'
 }
